k8/istio/deployment/address-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: address
spec:
  selector:
    matchLabels:
      app: address
  replicas: ${POD}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: address
        version: v1
    spec:
      containers:
        - name: address
          image: address:${IMAGE_TAG}
          ports:
            - containerPort: 9091
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9091
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1024Mi"
              cpu: "600m"
