k8/istio/deployment/user-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: user-v1
  labels:
    app: user
    version: v1
spec:
  selector:
    matchLabels:
      app: user
      version: v1
  replicas: ${POD}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: user
        version: v1
    spec:
      containers:
        - name: user
          image: user:${IMAGE_TAG}
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1024Mi"
              cpu: "600m"
